--- a/src/main/webapp/VAADIN/widgetsets/cl.koritsu.valued.ValuedWidgetSet/popupbutton/popupbutton.css
+++ b/src/main/webapp/VAADIN/widgetsets/cl.koritsu.valued.ValuedWidgetSet/popupbutton/popupbutton.css
@@ -14,16 +14,13 @@
 }
 
 .v-popupbutton .v-popup-indicator:before {
-	font-size: 0.7em;
+	font-size: 1.1em;
 	font-family: FontAwesome;
-	content: '\f078';
-	vertical-align: 0.15em;
-	margin: 0 -0.2em 0 0.5em;
-	opacity: 0.5;
+	content: '\f0d7'
 }
 
 .popupbutton-legacy .v-popup-indicator:before {
-	content: ' ';
+	content: ' '
 }
 
 .v-popupbutton.v-disabled .v-popup-indicator {
