avances relacionados a facturación y bitacora de tasaciones

--- a/src/main/webapp/VAADIN/themes/dashboard/common.scss
+++ b/src/main/webapp/VAADIN/themes/dashboard/common.scss
@@ -12,6 +12,12 @@
 		color: white;
 	}
 
+  .img-diagrama{
+  	display: block;
+	margin-left: auto;
+	margin-right: auto;
+  }
+  
   .valo-menu {
     border-right: none;
 
