--- a/src/main/webapp/VAADIN/themes/dashboard/styles.css
+++ b/src/main/webapp/VAADIN/themes/dashboard/styles.css
@@ -10858,6 +10858,12 @@ div.v-layout.v-horizontal.v-widget {
 	color: white;
 }
 
+.dashboard .img-diagrama {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .dashboard .valo-menu {
 	border-right: none;
 }
